mdapipkg/objects/AssetAvailability__b.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Asset Availability</relationshipLabel>
        <relationshipName>Asset_Availability</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DailyAddition__c</fullName>
        <label>Daily Addition</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyDrawDown__c</fullName>
        <label>DailyDrawDown</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Final__c</fullName>
        <label>Daily Final</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Availability__c</fullName>
        <label>Initial Availability</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <indexes>
        <fullName>ixAssetDate</fullName>
        <fields>
            <name>Asset__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>Date__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <label>Asset Date</label>
    </indexes>
    <label>Asset Availability</label>
    <pluralLabel>Asset Availability</pluralLabel>
</CustomObject>